add featured use case.